--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_AUTH0_DOMAIN=dev-ffe8mssx5g46vq0i.eu.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=uApGNiZvEUL7fz9Tku2D2OVjDZbTL6Lc
+My_Api_key=AIzaSyBsaaOFjYWp1_i2gd6QzstLEMJm6GpPjI4
